# streamdex

./: .gitignore  Cargo.toml  README.md  aliases-example.toml
src/: cli.rs  config.rs  context.rs  error.rs  event.rs  handler.rs  links.rs  main.rs  room.rs  runner.rs  target.rs  tui.rs  twitch.rs  utils.rs  youtube.rs
src/tui/: app.rs  matcher.rs  mod.rs  panel.rs  utils.rs
src/tui/widgets/: action_select.rs  colors.rs  main.rs  main_list.rs  mod.rs  search_bar.rs
