workspace = { members = ["ikan/new-project"] }
[package]
name = "streamdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "derive"] }
serde = { version = "1.0.197", features = ["derive"] }
# serde_json = "1.0.111"
toml = "0.8.10"
url = "2.5.0"
